--- a/index.html
+++ b/index.html
@@ -12,19 +12,19 @@
     <table class="main_table" border="0">
         <tr class="table_margin_tr"></tr>
         <tr class="table_margin_main">
-            <td class="table_margin_td"></td>
+            <td class="homepage_table_margin_td"></td>
             <td>
                 <div><h1 id="heading_homepage">WebMsg Open Service</h1></div>
-                <div class="subtitle">Please enter your nickname and the name of the session that you want to participate.</div>
-                <div>
+                <div class="subtitle">Please enter your nickname and the ID of the session that you want to participate.</div>
+                <div id="homepage_inputs">
                     <label>Nickname: </label>
-                    <input type="TEXT" id="homepage_input_id" required />
-                    <label>Session name: </label>
-                    <input type="TEXT" id="homepage_input_session" required /></div>
-                <br/>
-                <input value="Enter" type="BUTTON" id="homepage_button"/>
+                    <input type="TEXT" id="homepage_input_id" required /><br/>
+                    <label>Session ID: </label>
+                    <input type="TEXT" id="homepage_input_session" required /><br/>
+                    <input value="Enter" type="BUTTON" id="homepage_button"/>
+                </div>
             </td>
-            <td class="table_margin_td"></td>
+            <td class="homepage_table_margin_td"></td>
         </tr>
     </table>
 
