--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
         </tr>
         <tr class="msg_input_tr">
             <td class="table_margin_td"></td>
-            <td><div class="input_div"><input type="TEXT" id="msg_input" placeholder="Write a message..."/></div><div><label>M:</label><input type="checkbox" id="mute_box"/><span id="history_span">History</span><input type="button" id="msg_input_button" value="Send"/></div></td>
+            <!-- <td><div class="input_div"><input type="TEXT" id="msg_input" placeholder="Write a message..."/></div><div><label>M:</label><input type="checkbox" id="mute_box"/><span id="history_span">History</span><input type="button" id="msg_input_button" value="Send"/></div></td> -->
+            <td><div class="input_div"><input type="TEXT" id="msg_input" placeholder="Write a message..."/></div><div><label>M:</label><input type="checkbox" id="mute_box"/><input type="button" id="msg_input_button" value="Send"/></div></td>
             <td class="table_margin_td"></td>
         </tr>
     </table>
