--- a/index.html
+++ b/index.html
@@ -2,15 +2,15 @@
 <html>
 <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-    <link rel="stylesheet" href="css/master.css" type="text/css" media="screen" charset="utf-8" />
+    <link rel="stylesheet" href="css/master.css" type="text/css" media="screen" />
     <script src="js/eventsource.js"></script>
     <script src="js/jquery-1.8.2.js"></script>
     <script src="js/main.js"></script>
     <title>Welcome to WebMsg</title>
 </head>
 <body>
-    <table class="main_table" border="0">
-        <tr class="table_margin_tr"></tr>
+    <table class="main_table">
+        <tr class="table_margin_tr"><td></td></tr>
         <tr class="table_margin_main">
             <td class="homepage_table_margin_td"></td>
             <td>
@@ -44,13 +44,13 @@
         </tr>
     </table>
 
-    <table class="pick_table" border="0">
-        <tr class="pick_tr"></tr>
+    <table class="pick_table">
+        <tr class="pick_tr"><td></td></tr>
         <tr><td class="pick_td"></td>
             <td class="pick_div_td"><div id="pick_div"></div>
             </td>
         <td class="pick_td"></td></tr>
-        <tr class="pick_tr"></tr>
+        <tr class="pick_tr"><td></td></tr>
     </table>
 
     <audio id="sendAudio"><source src="mp3/send.mp3" type="audio/mpeg"></audio>
