--- a/index.html
+++ b/index.html
@@ -3,49 +3,28 @@
 <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
     <link rel="icon" type="image/png" href="img/icon/chat.png" />
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/normalize/2.1.3/normalize.min.css"/>
+    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootswatch/3.0.1/cerulean/bootstrap.min.css"/>
     <link rel="stylesheet" href="css/master.css" type="text/css" media="screen" />
-    <script src="js/eventsource.js"></script>
-    <script src="js/jquery-1.8.2.js"></script>
-    <script src="js/main.js"></script>
     <title>WebMsg</title>
 </head>
 <body>
-    <output id="homepage_output">
-    <table class="main_table">
-        <tr class="table_margin_tr"><td></td></tr>
-        <tr class="table_margin_main">
-            <td class="homepage_table_margin_td"></td>
-            <td>
-                <div><h1 id="heading_homepage">WebMsg Open Service</h1></div>
-                <div class="subtitle">Please enter your nickname and the ID of the session that you want to participate or create.</div>
-                <div id="homepage_inputs">
-                    <label>Nickname: </label>
-                    <input type="TEXT" id="homepage_input_id" required /><br/>
-                    <label>Session ID: </label>
-                    <input type="TEXT" id="homepage_input_session" placeholder="Keep blank for the public session..." /><br/>
-                    <input value="Enter" type="BUTTON" id="homepage_button"/>
-                </div>
-            </td>
-            <td class="homepage_table_margin_td"></td>
-        </tr>
-    </table>
-    </output>
+    <div id="homepage_output" class="jumbotron">
+        <div><h1 id="heading_homepage">Web Message</h1></div>
+        <div class="help-block">Please enter your nickname and the ID of the session that you want to participate or create.</div>
+        <div id="homepage_inputs" class="form-group">
+            <label class="control-label" for="homepage_input_id">Nickname: </label>
+            <input type="TEXT" class="form-control" id="homepage_input_id" required />
+            <label class="control-label" for="homepage_input_session">Session ID: </label>
+            <input type="TEXT" class="form-control" id="homepage_input_session" placeholder="Keep blank for the public session..." /><br/>
+            <div id="homepage_button" class="btn btn-primary btn-lg">Enter</div>
+        </div>
+    </div>
 
-
-    <table class="chat_main_table" id="chat_main_table">
-        <tr class="msg_tr">
-            <td class="table_margin_td"></td>
-            <td class="msg_td"><div id="msg_div">
-                </div></td>
-            <td class="table_margin_td"></td>
-        </tr>
-        <tr class="msg_input_tr">
-            <td class="table_margin_td"></td>
-            <!-- <td><div class="input_div"><input type="TEXT" id="msg_input" placeholder="Write a message..."/></div><div><label>M:</label><input type="checkbox" id="mute_box"/><span id="history_span">History</span><input type="button" id="msg_input_button" value="Send"/></div></td> -->
-            <td><div class="input_div"><input type="TEXT" id="msg_input" placeholder="Write a message..."/></div><div><label>M:</label><input type="checkbox" id="mute_box"/><input type="button" id="msg_input_button" value="Send"/></div></td>
-            <td class="table_margin_td"></td>
-        </tr>
-    </table>
+    <div class="main-container">
+        <div id="msg_div"></div>
+        <div class="input_div"><input class="form-control" type="TEXT" id="msg_input" placeholder="Write a message..."/></div><div id="mute-control"><label>M:</label><input type="checkbox" id="mute_box"/><input type="button" id="msg_input_button" value="Send"/></div>
+    </div>
 
     <table class="pick_table">
         <tr class="pick_tr"><td></td></tr>
@@ -59,5 +38,17 @@
     <audio id="sendAudio"><source src="mp3/send.mp3" type="audio/mpeg"></audio>
     <audio id="msgAudio"><source src="mp3/msg.mp3" type="audio/mpeg"></audio>
 
+    <script src="js/eventsource.js"></script>
+    <script src="js/jquery-1.8.2.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/modernizr/2.6.2/modernizr.min.js"></script>
+    <script src="js/main.js"></script>
+    <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.2/js/bootstrap.min.js"></script>
+    <script>
+        $(function(){
+                if(!Modernizr.audio.mp3) {
+                    $("#mute-control").css("visibility", "hidden");
+                }
+        });
+    </script>
 </body>
 </html>
